--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,14 @@ set(MAIN_TEST 1.0)
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/spotify-api-plusplus/src")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/spotify-api-plusplus/src/models")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/spotify-api-plusplus/src/utils")
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src")
+
 link_directories("${CMAKE_CURRENT_SOURCE_DIR}/spotify-api-plusplus/build/src")
+
+add_subdirectory(src)
+# add_library(userWrapper userWrapper.cpp)
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src")
+
 
 add_executable(main main.cpp)
 
@@ -16,4 +23,7 @@ target_link_libraries(
         pthread
         libspotify-api-plusplus.so
         curl
+        userWrapper
 )
+
+# target_include_directories()
