Pivoting the project
I'm going to try and make a Magic the Gathering collection tracker that
helps you know what cards you have and in which decks you have them.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,8 @@
 cmake_minimum_required(VERSION 3.5.1)
 project(mains)
-set (CMAKE_CXX_STANDARD 11)
+set (CMAKE_CXX_STANDARD 20)
 
 set(MAIN_TEST 1.0)
-
-include_directories("${CMAKE_CURRENT_SOURCE_DIR}/spotify-api-plusplus/src")
-include_directories("${CMAKE_CURRENT_SOURCE_DIR}/spotify-api-plusplus/src/models")
-include_directories("${CMAKE_CURRENT_SOURCE_DIR}/spotify-api-plusplus/src/utils")
-include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src")
-
-link_directories("${CMAKE_CURRENT_SOURCE_DIR}/spotify-api-plusplus/build/src")
 
 add_subdirectory(src)
 # add_library(userWrapper userWrapper.cpp)
@@ -21,9 +14,10 @@ add_executable(main main.cpp)
 target_link_libraries(
         main
         pthread
-        libspotify-api-plusplus.so
         curl
-        userWrapper
+        curlpp
+        card
+        apiWrapper
 )
 
 # target_include_directories()
