--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,15 @@
-add_library(userWrapper userWrapper.cpp)
+add_library(card card.cpp)
+add_library(apiWrapper apiWrapper.cpp)
 
 find_package(CURL)
 set(LIBS ${LIBS} ${CURL_LIBRARIES})
 include_directories(${CURL_INCLUDE_DIRS})
 
-target_link_libraries(userWrapper spotify-api-plusplus.so curl)
+
+target_link_libraries(
+    apiWrapper
+    pthread
+    curl
+    curlpp
+)
+
