--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,9 +4,9 @@ USER root
 
 # Install needed packages. Use a separate RUN statement to add your own dependencies.
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install build-essential cmake cppcheck valgrind clang lldb llvm gdb libcurl4-openssl-dev
-
-# RUN git clone git@github.com:smaltby/spotify-api-plusplus.git
-# [Optional] Uncomment this section to install additional OS packages.
-# RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-#     && apt-get -y install --no-install-recommends <your-package-list-here>
+    && apt-get -y install build-essential \
+    cmake cppcheck valgrind clang lldb\
+     llvm gdb libcurlpp-dev \
+     libjsoncpp-dev libsqlite3-dev \
+     pkg-config nlohmann-json3-dev&& \
+     apt-get -y clean all
