Added deck class and updated card class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(card card.cpp)
 add_library(apiWrapper apiWrapper.cpp)
 add_library(collection collection.cpp)
+add_library(deck deck.cpp)
 
 find_package(CURL)
 set(LIBS ${LIBS} ${CURL_LIBRARIES})
